# python-project-83

./: .env.example  .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yml
page_analyzer/: __init__.py  app.py  db.py
page_analyzer/templates/: index.html  layout.html  urls_index.html  urls_show.html
